More method and endpoint renaming
